--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,16 @@ pool:
   - agent.name -equals EN2010407
 
 steps:
-- task: Maven@3
+- task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
+    goals: 'test'
+    options: 'clean verify'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
+    jdkVersionOption: 1.22
+    mavenVersionOption: 'Default'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+
